# sgos

./: .gitignore  CMakeLists.txt  database.tex  database1.tex
include/: main.h
src/: db.cc  main.cc
style/: main.css
